# PCLHoleAnalysis

./: CMakeLists.txt  README.md  pcl_hole_analysis.cpp
data/: HoleDetectionDataWithNormals.ply
